--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <p>August 2016 - September 2016</p>
     
   </ol>
+  <link href="style.css" rel="stylesheet">
+  
 </section>
 
 <section class="container">
