--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p>August 2016 - September 2016</p>
     
   </ol>
-  <link href="style.css" rel="stylesheet">
+  <link href="style.CSS" rel="stylesheet">
   
 </section>
 
