--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header class="name">
-  <h1>Yuka Ogasawara</h1>
+  <h1>Yuka Ogasawara oooaaa</h1>
   <h2>student</h2>
   <img class="thimbnail" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/13938542_1766721350238587_87422234446379566_n.jpg?oh=0619db4410edbcd7d09a15a8d04c7bc7&oe=586A1761" 
 </header>
